--- a/src/styles/archive/search.module.css
+++ b/src/styles/archive/search.module.css
@@ -4,7 +4,7 @@
     width: auto;
     /* margin-left: auto; */
     padding: var(--space-sm) 0;
-    margin: 0  0.7rem;
+    margin: 0;
   }
   
   .searchIcon {
