--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -53,7 +53,8 @@
   --font-xl: calc(35rem/ 16);
   --font-2xl:calc(45rem/ 16);
   --line-h: 1.5;
-  --line-h-sm: 1.3;
+  --line-h-sm: 1.25;
+  --line-h-xs: 1.15;
 
   /* Border Radius */
   --radius-xxs: 2px;
