--- a/src/styles/archive/previewPane.module.css
+++ b/src/styles/archive/previewPane.module.css
@@ -4,7 +4,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    width: var(--space-preview-pane);
+    width: var(--pane-width);
     padding: 0rem;
 
     display: flex;
