--- a/src/styles/archive/previewPane.module.css
+++ b/src/styles/archive/previewPane.module.css
@@ -152,7 +152,7 @@
     width: auto;
     height: auto;
     object-fit: contain;
-    border-radius: var(--radius-sm);
+    border-radius: var(--radius-xs);
     box-shadow:  0 0 1px rgba(0, 0, 0, .5);
 }
 
