--- a/src/styles/ui/markdown.module.css
+++ b/src/styles/ui/markdown.module.css
@@ -61,8 +61,8 @@
   
   .codeBlock {
     font-size: var(--font-xs);
-    background: rgba(var(--brand-grey-rgb), 0.2);
-    border-radius: var(--radius-xxs);
+    background: rgba(var(--brand-grey-rgb), 0.12);
+    border-radius: 0;
     padding: var(--space-sm) var(--font-sm);
     overflow: auto;
     margin: var(--space-md) 0;
@@ -70,9 +70,9 @@
   }
   .codeInline {
     font-size: var(--font-xs);
-    background: rgba(var(--brand-grey-rgb), 0.2);
+    background: rgba(var(--brand-grey-rgb), 0.12);
     padding: 0.1rem 0.3rem;
-    border-radius: var(--radius-xxs);
+    border-radius: 0;
      border: 1px solid rgba(var(--brand-dark-grey-rgb), 0.1);
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
     font-size: 0.92em;
