--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -87,11 +87,10 @@
   --brand-grey: #787880;
   --brand-grey-rgb: 173, 173, 179;
 
-  --brand-blue: #0364E1;
+  --brand-blue: hsl(213, 100%, 50%);
   --brand-blue-rgb: 3, 100, 225;
 
-  --folder-blue: #0077ff;
-  --folder-turquoise: #00bcd4;
+  --link-blue: hsl(213, 100%, 50%);
   
 
   --tag-red: rgb(255, 0, 8);
@@ -133,6 +132,8 @@
 
       --brand-grey: hsl(240, 3%, 59%);
       --brand-grey-rgb: 147, 147, 154;
+
+      --link-blue: hsl(213, 100%, 60%);
 
 
 
